crates/crucible-tui/src/timeline/snapshots/crucible_tui__timeline__tests__the_whole_list_at_eighty_columns_in_ascii.snap
---
source: crates/crucible-tui/src/timeline/tests.rs
expression: "pictured(80, Glyphs::Ascii)"
---
<Quiet>o </>0.0.1   <Quiet>2026-08-08</><Quiet>  18 added - 6 known limits</>                                 
<Quiet>o </>0.0.2   <Quiet>2026-08-09</><Quiet>  1 added - 1 fixed - 1 documented - 1 internal</>             
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.36.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Added</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A first command.</> It lists what there is.                                   
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.37.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Fixed</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A crash on start is gone.</> It read a file that was not there.               
<Quiet>|  </><Bullet>-</><Quiet> </>Another fix.                                                               
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.38.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Changed</>                                                                      
<Quiet>|  </><Bold>A paragraph under a </><Bold>he</><Bold>ading.</> It holds no bullet at all.                      
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.39.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Security</>                                                                     
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A TLS 1.3 </><Bold>ha</><Bold>ndshake that breaks the protocol's encryption rules is refused.</>
<Quiet>|  </>  crucible now uses rustls <Revision>0.23.45</>, which rejects a handshake message a      
<Quiet>|  </>  server sends in plaintext.                                                 
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.40.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Added</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A table.</>                                                                   
<Quiet>|</>                                                                               
<Quiet>|  </><Bold>Key</><Quiet>   </><Quiet> </><Quiet>|</><Quiet> </><Bold>What it does</>                                                        
<Quiet>|  </><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>+</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</><Quiet>-</>                                                        
<Quiet>|  </><Code>Ctrl+O</><Quiet> </><Quiet>|</><Quiet> </>opens                                                               
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.41.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Fixed</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>Code keeps its lines.</>                                                      
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>first line</>                                                                   
<Quiet>|  </><Quiet>second line</>                                                                  
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.41.1</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Fixed</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A link.</> See <Link>the notes</> for more.                                            
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.42.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Removed</>                                                                      
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>An old flag.</> It did nothing.                                               
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.43.0</><Quiet> - 2026-09-29</>                                                           
<Quiet>|</>                                                                               
<Quiet>|  </><Quiet>Added</>                                                                        
<Quiet>|  </><Bullet>-</><Quiet> </><Bold>A number.</> It was <Link>#123</> upstream.                                            
<Quiet>|</>                                                                               
<Quiet>|</>                                                                               
<Accent>* </><Strong>0.43.3</><Quiet> - 2026-09-29</><Quiet> - this version</>                                            
                                                                                
   <Bold>The newest summary.</> Output redirected under <Code>output.color</> keeps the markdown. 
                                                                                
   <Quiet>Fixed</>                                                                        
   <Bullet>-</><Quiet> </><Bold>Output keeps its markers.</> That setting dropped them, so <Code>**loud**</> came out  
     as loud.                                                                   
   <Bullet>-</><Quiet> </><Bold>A second fix.</> With a longer sentence that has to wrap at forty columns and 
     at eighty too, so that the hanging indent shows.                           
                                                                                
<Quiet>  + </>12 releases - ten newest in full - /release-notes <version> prints one
